@@ -86,7 +86,7 @@ public abstract class SkriptJUnitTest {
 	 * @return the test world.
 	 */
 	public static World getTestWorld() {
-		return Bukkit.getWorlds().getFirst();
+		return Bukkit.getWorlds().get(0);
 	}
 
 	/**
